--- a/fff/manifest.json
+++ b/fff/manifest.json
@@ -221,7 +221,9 @@
 					"img/quan-3.png",
 					"img/page3-glasses.png",
 					"img/page-6-mouse.png",
-					"img/page-3-pen.png"
+					"img/page-3-pen.png",
+					"img/me.png",
+					"img/me-code.png"
 				],
 				"refer": [],
 				"priority": 0
